@@ -1,5 +1,11 @@
 1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
+	* emu.el, emu-nemacs.el, emu-latin1.el, EMU-ELS: Move definitions
+	of emu-nemacs.el and emu-latin1.el to emu.el; abolish
+	emu-nemacs.el and emu-latin1.el.
+
+1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
 	* emu.el: Modify conditions to load sub-modules.
 
 	* emu.el, emu-e20.el: Move alias
